Run_Result/engine_log/insight_engine_log_2025-11-13T08-53-21-223Z.txt
[16:49:55] 启动 insight 应用...
[16:49:57] You can now view your Streamlit app in your browser.
[16:49:57] Network URL: [已隐藏]
[16:49:57] External URL: [已隐藏]
[16:50:43] ❌ 搜索执行失败: expected an indented block after 'try' statement on line 66 (db.py, line 67)
2025-11-13 16:50:43.742 | ERROR | [insight] 搜索执行失败: expected an indented block after 'try' statement on line 66 (db.py, line 67)
Traceback (most recent call last):
  File "/usr/lib/python3.12/threading.py", line 1030, in _bootstrap
    self._bootstrap_inner()
    │    └ <function Thread._bootstrap_inner at 0x7ac64f5a6f20>
    └ <Thread(Thread-154 (execute_engine_search), started daemon 134992046851776)>
  File "/usr/lib/python3.12/threading.py", line 1073, in _bootstrap_inner
    self.run()
    │    └ <function Thread.run at 0x7ac64f5a6c00>
    └ <Thread(Thread-154 (execute_engine_search), started daemon 134992046851776)>
  File "/usr/lib/python3.12/threading.py", line 1010, in run
    self._target(*self._args, **self._kwargs)
    │    │        │    │        │    └ {}
    │    │        │    │        └ <Thread(Thread-154 (execute_engine_search), started daemon 134992046851776)>
    │    │        │    └ ('insight', '第十五届全国运动会吉祥物大湾鸡舆情')
    │    │        └ <Thread(Thread-154 (execute_engine_search), started daemon 134992046851776)>
    │    └ <function execute_engine_search at 0x7ac64af24900>
    └ <Thread(Thread-154 (execute_engine_search), started daemon 134992046851776)>
> File "/home/bettafish/Public_Opinion/BettaFish-main/app.py", line 1453, in execute_engine_search
    from InsightEngine import DeepSearchAgent, Settings as EngineSettings
  File "/home/bettafish/Public_Opinion/BettaFish-main/InsightEngine/__init__.py", line 6, in <module>
    from .agent import DeepSearchAgent, create_agent
  File "/home/bettafish/Public_Opinion/BettaFish-main/InsightEngine/agent.py", line 23, in <module>
    from .tools import MediaCrawlerDB, DBResponse, keyword_optimizer, multilingual_sentiment_analyzer
  File "/home/bettafish/Public_Opinion/BettaFish-main/InsightEngine/tools/__init__.py", line 6, in <module>
    from .search import (
  File "/home/bettafish/Public_Opinion/BettaFish-main/InsightEngine/tools/search.py", line 32, in <module>
    from ..utils.db import fetch_all
  File "/home/bettafish/Public_Opinion/BettaFish-main/InsightEngine/utils/db.py", line 67
    database_url: str = _build_database_url()
    ^^^^^^^^^^^^
IndentationError: expected an indented block after 'try' statement on line 66